--- a/prototypes/src/gui/view/login.fxml
+++ b/prototypes/src/gui/view/login.fxml
@@ -23,12 +23,12 @@
          </font>
       </Label>
       <TextField fx:id="emailTextField" layoutX="126.0" layoutY="166.0" prefHeight="26.0" prefWidth="200.0" promptText="Adresse e-mail" />
-      <PasswordField fx:id="motDePassePasswordField" layoutX="126.0" layoutY="201.0" prefHeight="26.0" prefWidth="200.0" promptText="Mot de passe" />
-      <Hyperlink fx:id="motDePasseOublieHyperLink" layoutX="217.0" layoutY="250.0" text="Mot de passe oublié" />
-      <Hyperlink fx:id="inscriptionHyperlink" layoutX="54.0" layoutY="423.0" text="Pas de compte TeamPoint ? Créez vous un compte " />
-      <Button fx:id="seConnecterButton" layoutX="114.0" layoutY="308.0" mnemonicParsing="false" onAction="#seConnecterButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="SE CONNECTER" />
-      <Label fx:id="authentificationIncorrecte" alignment="CENTER" layoutX="6.0" layoutY="282.0" prefHeight="16.0" prefWidth="429.0" textFill="#d30b0b" />
-      <Button fx:id="fermerButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#fermerButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
+      <PasswordField fx:id="passwordField" layoutX="126.0" layoutY="201.0" prefHeight="26.0" prefWidth="200.0" promptText="Mot de passe" />
+      <Hyperlink fx:id="passwordForgetHyperLink" layoutX="217.0" layoutY="250.0" text="Mot de passe oublié" />
+      <Hyperlink fx:id="signUpHyperlink" layoutX="54.0" layoutY="423.0" text="Pas de compte TeamPoint ? Créez vous un compte " />
+      <Button fx:id="loginButton" layoutX="114.0" layoutY="308.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="SE CONNECTER" />
+      <Label fx:id="wrongAuthentification" alignment="CENTER" layoutX="6.0" layoutY="282.0" prefHeight="16.0" prefWidth="429.0" textFill="#d30b0b" />
+      <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
          <font>
             <Font size="9.0" />
          </font>
