--- a/prototypes/src/gui/view/subscription.fxml
+++ b/prototypes/src/gui/view/subscription.fxml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="788.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
    <children>
-      <Label layoutX="112.0" layoutY="131.0" text="Connexion">
+      <Label layoutX="198.0" layoutY="105.0" prefHeight="25.0" prefWidth="296.0" text="S'inscrire sur TeamPoint">
          <font>
-            <Font size="17.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="emailTextField" layoutX="126.0" layoutY="166.0" prefHeight="26.0" prefWidth="200.0" promptText="Adresse e-mail" />
-      <PasswordField fx:id="passwordField" layoutX="126.0" layoutY="201.0" prefHeight="26.0" prefWidth="200.0" promptText="Mot de passe" />
-      <Hyperlink fx:id="passwordForgetHyperLink" layoutX="217.0" layoutY="250.0" text="Mot de passe oublié" />
-      <Hyperlink fx:id="signUpHyperlink" layoutX="54.0" layoutY="423.0" text="Pas de compte TeamPoint ? Créez vous un compte " />
-      <Button fx:id="loginButton" layoutX="114.0" layoutY="308.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="SE CONNECTER" />
+      <TextField fx:id="emailTextField" layoutX="67.0" layoutY="166.0" prefHeight="26.0" prefWidth="242.0" promptText="Prénom" />
+      <Hyperlink fx:id="signUpHyperlink" layoutX="170.0" layoutY="394.0" text="Vous avez déjà un compte TeamPoint ? Connectez vous" />
+      <Button fx:id="loginButton" layoutX="234.0" layoutY="345.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="S'INSCRIRE" />
       <Label fx:id="wrongAuthentification" alignment="CENTER" layoutX="6.0" layoutY="282.0" prefHeight="16.0" prefWidth="429.0" textFill="#d30b0b" />
-      <Button fx:id="closeButton" cancelButton="true" layoutX="741.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
+      <Button fx:id="closeButton" cancelButton="true" layoutX="609.0" layoutY="20.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
          <font>
             <Font size="9.0" />
          </font>
       </Button>
+      <ImageView fitHeight="67.0" fitWidth="300.0" layoutX="198.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/teampoint.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="emailTextField1" layoutX="357.0" layoutY="166.0" prefHeight="26.0" prefWidth="252.0" promptText="Nom de famille" />
+      <PasswordField fx:id="passwordField1" layoutX="357.0" layoutY="217.0" prefHeight="26.0" prefWidth="252.0" promptText="Nouveau Mot de passe" />
+      <DatePicker layoutX="357.0" layoutY="269.0" prefHeight="26.0" prefWidth="252.0" promptText="Date de naissance" />
+      <TextField fx:id="emailTextField2" layoutX="67.0" layoutY="217.0" prefHeight="26.0" prefWidth="242.0" promptText="Adresse Mail" />
+      <TextField fx:id="emailTextField3" layoutX="67.0" layoutY="269.0" prefHeight="26.0" prefWidth="242.0" promptText="Numéro de télépone" />
    </children>
 </AnchorPane>
