--- a/prototypes/src/gui/view/login.fxml
+++ b/prototypes/src/gui/view/login.fxml
@@ -25,7 +25,7 @@
       <TextField fx:id="emailTextField" layoutX="126.0" layoutY="166.0" prefHeight="26.0" prefWidth="200.0" promptText="Adresse e-mail" />
       <PasswordField fx:id="passwordField" layoutX="126.0" layoutY="201.0" prefHeight="26.0" prefWidth="200.0" promptText="Mot de passe" />
       <Hyperlink fx:id="passwordForgetHyperLink" layoutX="217.0" layoutY="250.0" text="Mot de passe oublié" />
-      <Hyperlink fx:id="signUpHyperlink" layoutX="54.0" layoutY="423.0" text="Pas de compte TeamPoint ? Créez vous un compte " />
+      <Hyperlink fx:id="signUpHyperlink" layoutX="54.0" layoutY="423.0" text="Pas de compte TeamPoint ? Créez vous un compte " onAction="#signUpHyperlinkOnAction"/>
       <Button fx:id="loginButton" layoutX="114.0" layoutY="308.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="SE CONNECTER" />
       <Label fx:id="wrongAuthentification" alignment="CENTER" layoutX="6.0" layoutY="282.0" prefHeight="16.0" prefWidth="429.0" textFill="#d30b0b" />
       <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
