--- a/prototypes/src/gui/view/subscription.fxml
+++ b/prototypes/src/gui/view/subscription.fxml
@@ -18,7 +18,7 @@
          </font>
       </Label>
       <TextField fx:id="firstNameTextField" layoutX="49.0" layoutY="166.0" prefHeight="26.0" prefWidth="242.0" promptText="Prénom" />
-      <Hyperlink fx:id="signInHyperlink" layoutX="110.0" layoutY="336.0" text="Vous avez déjà un compte TeamPoint ? Connectez vous" />
+      <Hyperlink fx:id="signInHyperlink" layoutX="110.0" layoutY="336.0" text="Vous avez déjà un compte TeamPoint ? Connectez vous" onAction="#signInHyperlinkOnAction" />
       <Button fx:id="subscriptionButton" layoutX="179.0" layoutY="274.0" mnemonicParsing="false" onAction="#subscriptionButtonOnAction" prefHeight="38.0" prefWidth="224.0" text="S'INSCRIRE" />
       <Label fx:id="numberInvalidLabel" alignment="CENTER" layoutX="67.0" layoutY="304.0" prefHeight="16.0" prefWidth="242.0" textFill="#f20f0f" />
       <Button fx:id="closeButton" cancelButton="true" layoutX="552.0" layoutY="20.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
