--- a/prototypes/src/gui/view/home.fxml
+++ b/prototypes/src/gui/view/home.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.HomeController">
     <children>
         <AnchorPane layoutX="92.0" layoutY="54.0" prefHeight="523.0" prefWidth="822.0">
@@ -51,5 +52,7 @@
                 <Image url="@../../../images/3points.png" />
             </image>
         </ImageView>
+        <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
+
     </children>
 </AnchorPane>
