--- a/prototypes/src/gui/view/profile.fxml
+++ b/prototypes/src/gui/view/profile.fxml
@@ -10,7 +10,8 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.Button?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ProfileController">
    <children>
       <AnchorPane layoutX="93.0" layoutY="56.0" prefHeight="523.0" prefWidth="822.0">
          <children>
@@ -46,6 +47,8 @@
                   <Font size="14.0" />
                </font>
             </Label>
+            <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
+
             <Hyperlink layoutX="36.0" layoutY="446.0" prefHeight="26.0" prefWidth="139.0" text="Modifier e-mail">
                <font>
                   <Font size="14.0" />
