--- a/prototypes/src/gui/view/home.fxml
+++ b/prototypes/src/gui/view/home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.image.Image?>
@@ -8,7 +9,6 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.HomeController">
     <children>
         <AnchorPane layoutX="92.0" layoutY="54.0" prefHeight="523.0" prefWidth="822.0">
@@ -47,12 +47,12 @@
             </image>
         </ImageView>
         <MenuButton layoutX="432.0" layoutY="18.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="266.0" text="Selectionner un workspace" />
-        <ImageView fitHeight="28.0" fitWidth="31.0" layoutX="987.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="28.0" fitWidth="31.0" layoutX="987.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../images/3points.png" />
             </image>
         </ImageView>
-        <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
+        <Button fx:id="closeButton" cancelButton="true" layoutX="1018.0" layoutY="7.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="5.0" prefWidth="23.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS" />
 
     </children>
 </AnchorPane>
