--- a/prototypes/src/gui/view/profile.fxml
+++ b/prototypes/src/gui/view/profile.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ProfileController">
    <children>
       <AnchorPane layoutX="93.0" layoutY="56.0" prefHeight="523.0" prefWidth="822.0">
@@ -47,7 +47,6 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button fx:id="closeButton" cancelButton="true" layoutX="410.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS">
 
             <Hyperlink layoutX="36.0" layoutY="446.0" prefHeight="26.0" prefWidth="139.0" text="Modifier e-mail">
                <font>
@@ -69,28 +68,29 @@
       </Label>
       <ImageView fitHeight="69.0" fitWidth="51.0" layoutX="9.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@icon.png" />
+            <Image url="@../../../images/icon.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="37.0" fitWidth="43.0" layoutX="14.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@bellButton.png" />
+            <Image url="@../../../images/bellButton.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="26.0" fitWidth="31.0" layoutX="21.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@4Boxes.png" />
+            <Image url="@../../../images/4Boxes.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="37.0" fitWidth="33.0" layoutX="18.0" layoutY="516.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@parameters.png" />
+            <Image url="@../../../images/parameters.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="46.0" fitWidth="50.0" layoutX="10.0" layoutY="556.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@profile.png" />
+            <Image url="@../../../images/profile.png" />
          </image>
       </ImageView>
+      <Button fx:id="closeButton" cancelButton="true" layoutX="1018.0" layoutY="12.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS" />
    </children>
 </AnchorPane>
