--- a/prototypes/src/gui/view/profile.fxml
+++ b/prototypes/src/gui/view/profile.fxml
@@ -3,63 +3,88 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="1056.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="778.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ProfileController">
    <children>
-      <AnchorPane layoutX="93.0" layoutY="56.0" prefHeight="523.0" prefWidth="822.0">
+      <AnchorPane layoutX="93.0" layoutY="56.0" prefHeight="560.0" prefWidth="966.0">
          <children>
-            <Line endX="-72.0" endY="542.2929077148438" layoutX="60.0" layoutY="37.0" startX="-72.0" startY="-93.0" />
-            <Line endX="777.0" endY="-52.0" layoutX="187.0" layoutY="59.0" startX="-198.5" startY="-52.0" />
-            <Label layoutX="30.0" layoutY="40.0" text="Nom :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="26.0" layoutY="93.0" text="Email">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="26.0" layoutY="144.0" text="Description du profil :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextArea layoutX="228.0" layoutY="137.0" prefHeight="145.0" prefWidth="589.0" promptText="Veuillez décrie votre profil" />
-            <TextField layoutX="228.0" layoutY="89.0" prefHeight="26.0" prefWidth="203.0" promptText="Saisissez votre email" />
-            <TextField layoutX="228.0" layoutY="36.0" prefHeight="26.0" prefWidth="305.0" promptText="Saisissez votre nom complet" />
-            <Label layoutX="26.0" layoutY="323.0" text="Numéro de téléphone :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField layoutX="228.0" layoutY="319.0" prefHeight="26.0" prefWidth="305.0" promptText="Saisissez votre nom complet" />
-            <TextField layoutX="228.0" layoutY="369.0" prefHeight="26.0" prefWidth="305.0" promptText="Saisissez votre nom complet" />
-            <Label layoutX="26.0" layoutY="373.0" text="Date de naissance :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <Line endX="-71.99998474121094" endY="426.0" layoutX="60.0" layoutY="37.0" startX="-72.0" startY="-93.0" />
+            <Line endX="500.20001220703125" endY="-51.99999237060547" layoutX="187.0" layoutY="59.0" startX="-198.5" startY="-52.0" />
 
-            <Hyperlink layoutX="36.0" layoutY="446.0" prefHeight="26.0" prefWidth="139.0" text="Modifier e-mail">
+            <Hyperlink fx:id="editNumberHyperlink" layoutX="-4.0" layoutY="394.0" prefHeight="28.0" prefWidth="203.0" text="Modifier numéro de téléphone">
                <font>
                   <Font size="14.0" />
                </font>
             </Hyperlink>
-            <Hyperlink layoutX="36.0" layoutY="482.0" text="Modifier mot de passe">
+            <Label fx:id="editNumberLabel" layoutX="200.0" layoutY="398.0" prefHeight="20.0" prefWidth="230.0" text="&quot;email généré inséré ici&quot;">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Hyperlink fx:id="editNameHyperlink" layoutX="30.0" layoutY="38.0" text="Modifier nom">
                <font>
                   <Font size="14.0" />
                </font>
             </Hyperlink>
-            <Label layoutX="247.0" layoutY="451.0" prefHeight="18.0" prefWidth="182.0" text="&quot;email généré inséré ici&quot;" />
-            <Label layoutX="246.0" layoutY="487.0" prefHeight="18.0" prefWidth="114.0" text="************" />
+            <Hyperlink fx:id="editFirstNameHyperlink" layoutX="30.0" layoutY="77.0" text="Modifier Prénom">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
+            <Hyperlink fx:id="editEmailHyperlink" layoutX="30.0" layoutY="115.0" text="Modifier adresse mail">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
+            <Hyperlink fx:id="editDescriptionHyperlink" layoutX="30.0" layoutY="159.0" text="Modifier Description">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
+            <Hyperlink fx:id="editPasswordHyperlink" layoutX="36.0" layoutY="321.0" text="Modifier mot de passe">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
+            <Hyperlink fx:id="editBirthdayHyperlink" layoutX="13.0" layoutY="356.0" text="Modifier date de naissance">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Hyperlink>
+            <Label fx:id="editNameLabel" layoutX="200.0" layoutY="41.0" prefHeight="18.0" prefWidth="230.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="editFirstNameLabel" layoutX="200.0" layoutY="80.0" prefHeight="18.0" prefWidth="230.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="editEmailLabel" layoutX="200.0" layoutY="118.0" prefHeight="18.0" prefWidth="230.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="editDescriptionLabel" layoutX="207.0" layoutY="159.0" prefHeight="151.0" prefWidth="428.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="200.0" layoutY="324.0" prefHeight="18.0" prefWidth="230.0" text="***********">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="editBirthdayLabel" layoutX="200.0" layoutY="360.0" prefHeight="18.0" prefWidth="230.0" text="Label">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
          </children></AnchorPane>
       <Label layoutX="111.0" layoutY="25.0" text="Profil">
          <font>
@@ -71,26 +96,7 @@
             <Image url="@../../../images/icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="37.0" fitWidth="43.0" layoutX="14.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/bellButton.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="31.0" layoutX="21.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/4Boxes.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="37.0" fitWidth="33.0" layoutX="18.0" layoutY="516.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/parameters.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="46.0" fitWidth="50.0" layoutX="10.0" layoutY="556.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/profile.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="closeButton" cancelButton="true" layoutX="1018.0" layoutY="12.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS" />
+      <Button fx:id="closeButton" cancelButton="true" layoutX="740.0" layoutY="12.0" mnemonicParsing="false" onAction="#closeButtonOnAction" prefHeight="6.0" prefWidth="20.0" style="-fx-background-color: #E76A4F;" text="X" textOverrun="CENTER_WORD_ELLIPSIS" />
+      <Button fx:id="backButton" layoutX="16.0" layoutY="76.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="35.0" style="-fx-background-color: #3AB9E8;" text="&lt;" onAction="#backButtonOnAction" />
    </children>
 </AnchorPane>
