features : connection possible

--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -23,7 +23,7 @@
         </Label>
         <ImageView fitHeight="69.0" fitWidth="51.0" layoutX="9.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../../../images/icon.png" />
+                <Image url="@../../../images/teampointicon.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="37.0" fitWidth="43.0" layoutX="14.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
