features : creation of workspace good

--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -90,7 +90,7 @@
             <Image url="@../../../../../../images/deconnexion.jpg" />
          </image>
       </ImageView>
-      <MenuButton layoutX="998.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="42.0" text="+">
+      <MenuButton fx:id="addDelete" layoutX="998.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="42.0" text="+">
         <items>
           <MenuItem fx:id="createWorkspaceMenuItem" mnemonicParsing="false" onAction="#goToCreateW" text="Créer un workspace" />
           <MenuItem fx:id="deleteWorkspaceMenuItem" mnemonicParsing="false" onAction="#goToDeleteW" text="Supprimer un workspace" />
