features : creation of workspace good

--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -56,19 +56,19 @@
                               </TableView>
                               <ImageView fx:id="addItemCollectionImage" fitHeight="20.0" fitWidth="27.0" layoutX="230.0" layoutY="16.0" onMouseClicked="#addItemCollectionClicked" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../Mockups/plusButton.png" />
+                                    <Image url="@../../../images/plusButton.png" />
                                  </image>
                               </ImageView>
                               <Label fx:id="addItemCollectionLabel" layoutX="257.0" layoutY="15.0" onMouseClicked="#addItemCollectionClicked" prefHeight="18.0" prefWidth="141.0" text="Ajouter un item collection" />
                               <ImageView fx:id="addColumnImage" fitHeight="20.0" fitWidth="27.0" layoutX="626.0" layoutY="47.0" onMouseClicked="#addColumnClicked" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../Mockups/plusButton.png" />
+                                    <Image url="@../../../images/plusButton.png" />
                                  </image>
                               </ImageView>
                               <Label fx:id="addColumnLabel" layoutX="653.0" layoutY="46.0" onMouseClicked="#addColumnClicked" prefHeight="18.0" prefWidth="111.0" text="Ajouter une colonne" />
                               <ImageView fx:id="addItemImage" fitHeight="20.0" fitWidth="27.0" layoutX="15.0" layoutY="459.0" onMouseClicked="#addItemClicked" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../../Mockups/plusButton.png" />
+                                    <Image url="@../../../images/plusButton.png" />
                                  </image>
                               </ImageView>
                               <Label fx:id="addItemLabel" layoutX="42.0" layoutY="458.0" onMouseClicked="#addItemClicked" prefHeight="18.0" prefWidth="94.0" text="Ajouter une item" />
